Bug 395213 - R don't highlight entry after execution
Summary: R don't highlight entry after execution
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: r-backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Filipe Saraiva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-10 14:10 UTC by Nikita Sirgienko
Modified: 2018-09-27 20:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Sirgienko 2018-06-10 14:10:27 UTC
R don't highlight command entry after execution, you need click to this entry, that it's happened

Reproducible: Always

Steps to Reproduce:
  1. Tell Cantor to create a new R sheet.
  2. Tell R to execute:
x <- 1234
  3. Execute this entry

Actual result:
  We have result '[1] 1234', but x don't highlight as variable, but if we click on the entry, 'x' starts highlighted

Expected Results:
  After execution 'x' highlighted as variable immediately
Comment 1 Nikita Sirgienko 2018-09-27 20:08:05 UTC
Git commit ee75481d10f93bf2be65b03f87281f8b51136be6 by Nikita Sirgienko.
Committed on 27/09/2018 at 20:06.
Pushed by sirgienko into branch 'master'.

Add rehighlighting for entries after execution in R backend
FIXED-IN: 18.12

M  +5    -0    src/backends/R/rhighlighter.cpp
M  +1    -0    src/backends/R/rhighlighter.h
M  +3    -0    src/backends/R/rsession.cpp
M  +1    -0    src/backends/R/rsession.h

https://commits.kde.org/cantor/ee75481d10f93bf2be65b03f87281f8b51136be6