Add rehighlighting for entries after execution in R backend

BUG: 395213
FIXED-IN: 18.12